Fixed index.html, added server input, other stuff

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 <title>RPS Game</title>
 <link rel="stylesheet" href="./style/style.css">
-<script src="./js/script.js"></script>
+<script src="./js/index.js"></script>
 </head>
 <body>
-  <h1 class="heading-1">RPS Game</h1>
+  <h1 class="heading-title">RPS Game</h1>
   <form onsubmit="checkFirstPlayer(); return false;" id="form">
     <div class="server-div">
     <br>
